--- a/grindonweb-main/public/css/style.css
+++ b/grindonweb-main/public/css/style.css
@@ -717,7 +717,7 @@ a:focus {
 
 .client_section .box .client_info .client_name h5 {
   font-weight: 600;
-  color: #db4f66;
+  color: black;
 }
 
 .client_section .box .client_info .client_name h6 {
