fixing color->logo bg color white->555

--- a/grindonweb-main/public/css/style.css
+++ b/grindonweb-main/public/css/style.css
@@ -3,7 +3,7 @@
 body {
   font-family: "poppins", sans-serif;
   color: #101010;
-  background-color: #fffdfd;
+  background-color: rgb(34, 37, 42, 255);
 }
 
 .layout_padding {
